@@ -1,5 +1,4 @@
 import Foundation
-import UIKit
 
 final class CloudExporter {
     static func export(_ data: Data, fileName: String, toICloud: Bool, completion: @escaping (URL?)->Void) {
@@ -7,11 +6,11 @@ final class CloudExporter {
         if toICloud, let ubiq = fm.url(forUbiquityContainerIdentifier: nil)?.appendingPathComponent("Documents") {
             let url = ubiq.appendingPathComponent(fileName)
             try? fm.createDirectory(at: ubiq, withIntermediateDirectories: true)
-            do { try data.write(to: url); completion(url) } catch { completion(nil) }
+            do { try data.write(to: url, options: .completeFileProtectionUntilFirstUserAuthentication); completion(url) } catch { completion(nil) }
         } else {
             // fallback: temp url (ShareSheet handled in UI layer)
             let url = URL(fileURLWithPath: NSTemporaryDirectory()).appendingPathComponent(fileName)
-            do { try data.write(to: url); completion(url) } catch { completion(nil) }
+            do { try data.write(to: url, options: .completeFileProtectionUntilFirstUserAuthentication); completion(url) } catch { completion(nil) }
         }
     }
 }
