@@ -14,8 +14,11 @@ struct CalibrationWizardView: View {
 
                 Button("Dark Frame") { captureManager.captureCalibration(.dark, seconds: 3) }
                     .buttonStyle(.borderedProminent)
+                    .accessibilityLabel("Cattura dark frame")
                 Button("Flat Frame") { captureManager.captureCalibration(.flat, seconds: 3) }
+                    .accessibilityLabel("Cattura flat frame")
                 Button("Bias Frame") { captureManager.captureCalibration(.bias, seconds: 0) }
+                    .accessibilityLabel("Cattura bias frame")
 
                 Spacer()
             }
