@@ -12,32 +12,43 @@ struct CaptureView: View {
         ScrollView {
             VStack(spacing: 16) {
                 if let ui = processedImage {
-                    Image(uiImage: ui).resizable().scaledToFit()
+                    Image(uiImage: ui)
+                        .resizable()
+                        .scaledToFit()
+                        .accessibilityLabel("Immagine elaborata")
                 } else {
-                    Rectangle().fill(Color.black.opacity(0.3))
+                    Rectangle().fill(Color.secondary.opacity(0.3))
                         .frame(height: 220)
-                        .overlay(Text("Nessuna immagine").foregroundColor(.white))
+                        .overlay(Text("Nessuna immagine").foregroundColor(.secondary))
                 }
 
                 HStack {
                     Button(captureManager.isRunning ? "Stop" : "Start") {
                         captureManager.isRunning ? captureManager.stop() : captureManager.start()
-                    }.buttonStyle(.borderedProminent)
+                    }
+                    .buttonStyle(.borderedProminent)
+                    .accessibilityLabel(captureManager.isRunning ? "Ferma acquisizione" : "Avvia acquisizione")
 
                     Button("Elabora") {
                         processedImage = captureManager.processFrames(applyLightPollution: useLightPollutionFilter)
-                    }.disabled(captureManager.frameCount == 0)
+                    }
+                    .disabled(captureManager.frameCount == 0)
+                    .accessibilityLabel("Elabora frames")
                 }
 
                 Toggle("Filtro antinquinamento", isOn: $useLightPollutionFilter)
                     .disabled(processedImage == nil)
+                    .accessibilityLabel("Filtro antinquinamento luminoso")
 
                 Toggle("AI Denoise", isOn: $captureManager.applyDenoise)
+                    .accessibilityLabel("Attiva AI Denoise")
                 Slider(value: $captureManager.denoiseStrength, in: 0...1)
                     .disabled(!captureManager.applyDenoise)
 
                 Toggle("Super-Resolution 2x", isOn: $captureManager.applySuperRes)
+                    .accessibilityLabel("Abilita super risoluzione 2x")
                 Toggle("Derotation", isOn: $captureManager.applyDerotation)
+                    .accessibilityLabel("Abilita derotazione")
 
                 Picker("Stacking", selection: $captureManager.stackingMethod) {
                     ForEach(StackingMethod.allCases) { Text($0.rawValue.capitalized).tag($0) }
@@ -57,13 +68,15 @@ struct CaptureView: View {
 
                 Button("Wizard Calibrazione") { showWizard = true }
                     .buttonStyle(.bordered)
+                    .accessibilityLabel("Apri wizard calibrazione")
                     .sheet(isPresented: $showWizard) { CalibrationWizardView().environmentObject(captureManager) }
 
                 Button("Scatta RAW/ProRAW") { showRAWPicker = true }
+                    .accessibilityLabel("Scatta RAW o ProRAW")
                     .sheet(isPresented: $showRAWPicker) { RAWCaptureSheet().environmentObject(captureManager) }
             }
             .padding()
         }
-        .background(Color.black.ignoresSafeArea())
+        .background(Color(.systemBackground).ignoresSafeArea())
     }
 }
