@@ -1,0 +1,7 @@
+# Dependencies
+
+| Package | License |
+|---------|---------|
+| [SwiftAA](https://github.com/onekiloparsec/SwiftAA) | MIT |
+| [SwiftLint](https://github.com/realm/SwiftLint) | MIT |
+
