@@ -11,6 +11,7 @@ packages:
 settings:
   base:
     SWIFT_VERSION: 5.9
+    SWIFT_TREAT_WARNINGS_AS_ERRORS: YES
 
 targets:
   AstroStackerPro:
@@ -29,6 +30,13 @@ targets:
         buildPhase: resources
     dependencies:
       - package: SwiftAA
+  AstroStackerProTests:
+    type: bundle.unit-test
+    platform: iOS
+    sources:
+      - path: Tests
+    dependencies:
+      - target: AstroStackerPro
     info:
       path: AstroStackerPro/Info.plist
       properties:
@@ -45,3 +53,4 @@ schemes:
     build:
       targets:
         AstroStackerPro: all
+        AstroStackerProTests: [test]
